--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,29 @@
-Options +FollowSymLinks
-RewriteEngine On
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^(.*)$ index.php [NC,L]
-RedirectMatch 403 /\..*$
+DirectoryIndex index.php
+#Keep Server alive
+<IfModule mod_headers.c>
+Header set Connection keep-alive
+</IfModule>
+# set the default language
+DefaultLanguage en-US
+<IfModule mod_rewrite.c>
+
+    Options +FollowSymlinks -MultiViews
+    RewriteEngine On
+    RewriteBase /
+
+    RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
+    RewriteRule ^(.*)$ https://%1/$1 [R=301,L]
+    
+    #if a file does not exist, we redirect to index.php
+    #this allows all klein routing to be handled by one file.
+    RewriteCond %{REQUEST_FILENAME} !-f
+
+    RewriteRule ^(.*)$ index.php [L,QSA]
+
+    RedirectMatch 403 /\..*$
+
+</IfModule>
+
+<Files "composer.phar">  
+  Require all denied
+</Files>
